# C2S_Challenge

./: .dockerignore  .env.development  .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: a0a5de490e2f_initial.py
c2s_challenge/: __main__.py  cli.py
c2s_challenge/client/: __init__.py  abstract.py  agent.py  client.py  exception.py  provider.py
c2s_challenge/common/: __init__.py  entity.py  logger.py  model.py
c2s_challenge/common/config/: __init__.py  exception.py
c2s_challenge/common/protocol/: __init__.py  contracts.py  dto.py  exception.py  model.py  protocol.py  request.py
c2s_challenge/common/setting/: __init__.py  abstract.py  exception.py  setting.py
c2s_challenge/config/: abstract.py  config.py
c2s_challenge/core/: __init__.py
c2s_challenge/script/: populate.py
c2s_challenge/script/faker/: provider.py  vehicle.py
c2s_challenge/script/seed/: __init__.py  provider.py  vehicle.py
c2s_challenge/server/: __init__.py  abstract.py  exception.py  provider.py  server.py
c2s_challenge/server/agent/: __init__.py  abstract.py  agent.py  model.py
c2s_challenge/server/aicore/: __init__.py  aicore.py  provider.py
c2s_challenge/server/database/: __init__.py  abstract.py  database.py  models.py  orm.py  provider.py  repository.py
c2s_challenge/server/event/: __init__.py  abstract.py  provider.py  router.py
docs/: architecture.md  database.md  usage.md
tests/: conftest.py
tests/server/: conftest.py  test_async_server.py
(+7 files in other folders)
