[project]
name = "c2s_challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "sqlalchemy>=2.0.43",
    "typer>=0.17.4",
]

[project.scripts]
c2s = "c2s_challenge.cli:app"

[tool.taskipy.tasks]
dev = "uv run c2s_challenge"
lint = "uvx ruff check"
format = "uvx ruff format"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["c2s_challenge"]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
