[project]
name = "c2s_challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.16.5",
    "faker>=37.8.0",
    "google-generativeai>=0.8.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
    "typer>=0.18.0",
]

[project.scripts]
c2s = "c2s_challenge.cli:cli"

[tool.taskipy.tasks]
dev = "uv run c2s_challenge"
lint = "uvx ruff check"
format = "uvx ruff format"

populate = "python -m c2s_challenge.script.populate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["c2s_challenge"]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
